# apex-a-plus-academy

./: CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  package-lock.json  package.json
audits/: AUDIT-2026-06-22-release-candidate-1.4.0.md  index.md
docs/: CODE-SIGNING.md  certification-authoring.md  release-candidate-1.4.0.md
docs/screenshots/: README.md
evidence/runs/: 20260622-102314-219-release-candidate.json
scripts/: sign-windows.ps1  validate-content.mjs
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/content/: flashcards.json  pbqs.json  questions.json  validate.ts
work/active/217-tauri-android-mobile-support-foundation/: README.md  work-item.json
work/active/218-tauri-ios-mobile-support-foundation/: README.md  work-item.json
work/completed/219-release-candidate-version-and-upgrade-audit/: README.md  work-item.json
work/completed/303-milestone-first-additional-certification/: README.md  work-item.json
