[package]
name = "apex-a-plus"
version = "1.2.1"
description = "A private, offline-first CompTIA A+ study companion"
authors = ["Apex Learning Labs"]
edition = "2021"

[lib]
name = "apex_a_plus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
